test/asm/macro-recursion.asm
recurse: MACRO
	recurse
ENDM
	recurse